--- a/section_01/package.json
+++ b/section_01/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kangdy25/Into-the-TypeScript#readme",
   "dependencies": {
-    "@types/node": "^22.14.1"
+    "@types/node": "^22.14.1",
+    "into-the-typescript": "file:"
   }
 }
