--- a/section_05/package.json
+++ b/section_05/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.14.1",
-    "section_03": "file:"
+    "section_03": "file:",
+    "section_05": "file:"
   }
 }
