--- a/section_11/package.json
+++ b/section_11/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.15.17",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "section_11": "file:"
